change setting for network