@@ -8,4 +8,4 @@ RUN ./gradlew build --no-daemon -x test
 FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
 COPY --from=builder /home/gradle/project/build/libs/wallet.jar wallet.jar
-ENTRYPOINT ["java", "-jar", "wallet.jar"]
+ENTRYPOINT ["java", "--add-opens=java.base/java.lang=ALL-UNNAMED", "-jar", "wallet.jar"]
